--- a/src/sass/page/_contact__title-layout.scss
+++ b/src/sass/page/_contact__title-layout.scss
@@ -5,5 +5,6 @@
     @include mq("md") {
       padding-left: rem(81);
       border-left: rem(1) solid $green;
+      padding-top: rem(5);
     }
   }
