--- a/src/sass/page/_campaign-page.scss
+++ b/src/sass/page/_campaign-page.scss
@@ -6,23 +6,10 @@
   width: 100%;
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
   height: 100%;
-}
-
-.campaign-page-cards {
-  align-items: center;
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  column-gap: rem(40);
-  row-gap: rem(40);
-  margin-top: rem(26);
+  max-width: rem(600);
   margin-left: auto;
   margin-right: auto;
-
-  @include mq("md") {
-    gap: rem(40);
-    margin-top: rem(78);
-    grid-template-columns: repeat(2, 1fr);
-  }
+  width: 100%;
 }
 
 .campaign-page__tab-inner {
@@ -60,11 +47,9 @@
   row-gap: rem(16);
 
   @include mq("md") {
-  // grid-template-columns: repeat(4, 1fr);
-  column-gap: rem(32);
-  display: flex;
-
-
+    // grid-template-columns: repeat(4, 1fr);
+    column-gap: rem(32);
+    display: flex;
   }
 }
 
@@ -84,7 +69,6 @@
   @include mq("md") {
     width: rem(162);
   }
-
 }
 
 .campaign-tab__item.is-color {
@@ -115,28 +99,18 @@
   row-gap: rem(40);
 
   @include mq("md") {
-  grid-template-columns: repeat(2, 1fr);
-  row-gap: rem(80);
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: rem(80);
   }
 }
 
-.campaign-page-card__item {
-    max-width: rem(600);
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-}
 
-.campaign-page-card__img {
-  // max-width: rem(280);
+
+.campaign-card__img-large {
   width: 100%;
-
-  // @include mq("md") {
-  //   max-width: rem(520);
-  // }
 }
 
-.campaign-page-card__img img {
+.campaign-card__img-large img {
   aspect-ratio: 280/188;
   object-fit: cover;
   width: 100%;
@@ -146,7 +120,7 @@
   }
 }
 
-.campaign-page-card__body {
+.campaign-card__body-large {
   padding-top: rem(16);
   padding-right: rem(17);
   padding-bottom: rem(17);
@@ -163,27 +137,7 @@
   }
 }
 
-.campaign-page-contents__card-price {
-  margin-top: rem(24);
-}
-
-.campaign-page-card__title {
-  font-size: rem(12);
-  color: $green;
-  border: rem(1) solid $green;
-  padding: rem(7) rem(10) rem(3.5) rem(12);
-  white-space: nowrap;
-  box-sizing: border-box;
-  overflow: hidden;
-  display: inline-flex;
-  font-family: "Noto Sans JP", serif;
-
-  @include mq("md") {
-  padding: rem(8) rem(15) rem(6) rem(14);
-  }
-}
-
-.campaign-page-card__title-sub {
+.campaign-card__title-sub-large {
   font-weight: $medium;
   font-family: "Noto Sans JP", serif;
   margin-top: rem(5);
@@ -194,78 +148,11 @@
   }
 }
 
-.campaign-page-card__text-line {
-  background-color: $green; /* 横線の色 */
-  content: "";
-  height: rem(1.5); /* 横線の高さ */
-  margin-top: rem(5);
-
-  @include mq("md") {
-    height: rem(1);
-    margin-top: rem(3);
-  }
-}
-
-.campaign-page-card__price {
-  margin-top: rem(10);
-
-  @include mq("md") {
-    margin-top: rem(23);
-  }
-}
-
-.campaign-page-card__price-text {
-  font-size: rem(14);
-  font-weight: $regular;
-  font-family: "Noto Sans JP", serif;
-  text-align: center;
-
-  @include mq("md") {
-    font-size: rem(16);
-    text-align: center;
-  }
-}
-
-.campaign-page-card__price-box {
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-  font-family: Lato;
-}
-
-.campaign-page-card__price-old {
-  font-size: rem(20);
-  font-weight: $bold;
-  text-decoration: line-through;
-  text-decoration-color: $red;
-  text-decoration-thickness: rem(3);
-  font-family: "Lato", sans-serif;
-
-  @include mq("md") {
-    font-size: rem(24);
-    line-height: 1;
-  }
-}
-
-.campaign-page-card__price-new {
-  font-size: rem(32);
-  font-weight: $bold;
-  color: $green;
-  margin-left: rem(18);
-  font-family: "Lato", sans-serif;
-
-  @include mq("md") {
-    font-size: rem(40);
-    margin-top: rem(0);
-    margin-left: rem(38);
-  }
-}
-
-.campaign-page-card__text-box {
+.campaign-card__text-box {
   margin-top: rem(15);
 }
 
-.campaign-page-card__date {
+.campaign-card__date {
   color: $green;
   font-size: rem(16);
   font-weight: $bold;
@@ -274,7 +161,7 @@
   font-family: "Lato", sans-serif;
 }
 
-.campaign-page-card__reserve {
+.campaign-card__reserve {
   color: $green;
   font-size: rem(14);
   font-weight: $regular;
@@ -283,28 +170,7 @@
   margin-top: rem(3);
 }
 
-.campaign-page-card__layout {
+.campaign-card__layout {
   text-align: center;
   margin-top: rem(12);
-}
-.campaign-page__contact-top {
-  margin-top: rem(105);
-
-  @include mq("md") {
-    margin-top: rem(140);
-  }
-}
-
-.campaign-page__footer-top {
-  background-color: $green;
-  margin-top: rem(105);
-  padding-top: rem(48);
-  padding-bottom: rem(56);
-
-
-  @include mq("md") {
-    margin-top: rem(160);
-    padding-top: rem(74);
-    padding-bottom: rem(80);
-  }
 }
