--- a/src/sass/page/_gallery__top.scss
+++ b/src/sass/page/_gallery__top.scss
@@ -4,19 +4,37 @@
   margin-top: rem(105);
 
   @include mq("md") {
-    margin-top: rem(158);
+    margin-top: rem(35);
+  }
+}
+
+.gallery__inner {
+  position: relative;
+}
+
+.gallery__inner::before {
+  @include mq("md") {
+    position: absolute;
+    content: "";
+    background: url(/assets/images/prco-logo.svg) center center / contain no-repeat;
+    width: rem(301);
+    height: rem(138);
+    top: -4%;
+    right: calc(50% - min(48vw, rem(620)));
   }
 }
 
 .gallery__list {
   margin-top: rem(40);
+
+  @include mq("md") {
+    margin-top: rem(76);
+  }
 }
 
 .gallery-list {
   display: grid;
   gap: rem(8);
-  // grid-auto-rows: 1fr;
-  // grid-template-columns: repeat(9, 1fr);
 
   @include mq("md") {
     grid-template-columns: repeat(9, 1fr);
@@ -24,10 +42,6 @@
     grid-auto-rows: 1fr;
   }
 }
-
-// .gallery__img {
-//   width: 100%;
-// }
 
 .gallery-list__item {
   @include mq("md") {
@@ -44,7 +58,7 @@
   }
 }
 
-.gallery-list-item__img {
+.gallery-list__item img {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 345/219;
@@ -55,20 +69,14 @@
   }
 }
 
-.gallery-list__item:nth-of-type(6n + 1)img,
-.gallery-list__item:nth-of-type(6n + 6)img {
+.gallery-list__item:nth-of-type(6n + 1) img,
+.gallery-list__item:nth-of-type(6n + 6) img {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 345/523;
   height: 100%;
 
   @include mq("md") {
-    aspect-ratio: 746/492;
+    aspect-ratio: 492/746;
   }
 }
-
-// .gallery-list__item:nth-of-type(6n + 6) {
-//   width: 100%;
-//   object-fit: cover;
-//   aspect-ratio: 345/523;
-// }
