--- a/src/sass/page/_price-item.scss
+++ b/src/sass/page/_price-item.scss
@@ -5,6 +5,9 @@
   line-height: 1.5;
   font-weight: $bold;
   font-family: Noto Sans JP;
+  border-bottom: rem(1) solid $green;
+  padding-bottom: rem(7);
+
 }
 
 .price-item__box {
@@ -45,24 +48,5 @@
     line-height: calc(24 / 16);
     display: block;
     float: left;
-  }
-}
-
-.price-item__text-line {
-  background-color: $green; /* 横線の色 */
-  content: "";
-  height: rem(1.5); /* 横線の高さ */
-  margin-top: rem(3);
-  flex-grow: 1;
-
-  @include mq("md") {
-    height: rem(1);
-    margin-top: rem(2);
-  }
-}
-
-.price-item__text-line:nth-child(2) {
-  @include mq("md") {
-    margin-top: rem(3);
   }
 }
