--- a/src/sass/module/_sub-page-mv.scss
+++ b/src/sass/module/_sub-page-mv.scss
@@ -6,6 +6,11 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  height: rem(460);
+
+  @include mq("md") {
+    height: rem(548);
+  }
 }
 
 .sub-page-mv__inner {
@@ -22,4 +27,5 @@
   height: 100%;
   top: 0;
   left: 0;
+  right: 0;
 }
