--- a/src/sass/page/_blog__cards.scss
+++ b/src/sass/page/_blog__cards.scss
@@ -1,9 +1,9 @@
 @use "global" as *;
 
 .blog__cards {
-  align-items: center;
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  // align-items: center;
+  // display: grid;
+  // grid-template-columns: repeat(1, 1fr);
 
   column-gap: rem(40);
   row-gap: rem(40);
@@ -12,6 +12,6 @@
   @include mq("md") {
     gap: rem(40);
     margin-top: rem(78);
-    grid-template-columns: repeat(3, 1fr);
+    // grid-template-columns: repeat(3, 1fr);
   }
 }
