--- a/src/sass/page/_header__hamberger.scss
+++ b/src/sass/page/_header__hamberger.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.hamburger {
+.header__hamburger {
   position: fixed;
   z-index: 9999;
   top: rem(29);
@@ -10,14 +10,14 @@
   cursor: pointer;
 }
 
-.hamburger.is-active {
+.header__hamburger.is-active {
   top: rem(28);
   right: rem(14);
   width: rem(40);
 }
 
 
-.hamburger-layout::before {
+.header__hamburger-layout::before {
     content: "";
     position: absolute;
     top: rem(-10); /* 適切なサイズを設定 */
@@ -26,7 +26,7 @@
     right: rem(-10); /* 適切なサイズを設定 */
 }
 
-.hamburger-layout::after {
+.header__hamburger-layout::after {
   content: "";
   position: absolute;
   top: rem(-10); /* 適切なサイズを設定 */
@@ -35,7 +35,7 @@
   right: rem(-10); /* 適切なサイズを設定 */
 }
 
-.hamburger span {
+.header__hamburger span {
   position: absolute;
   left: 0;
   display: inline-block;
@@ -48,11 +48,11 @@
   transition        : 0.3s ease-in-out;
 }
 
-.hamburger.is-active span {
+.header__hamburger.is-active span {
   background-color: $white;
 }
 
-.hamburger span:nth-child(1) {
+.header__hamburger span:nth-child(1) {
   top: rem(-2);
 }
 
