--- a/src/sass/page/_blog-cards__item-box.scss
+++ b/src/sass/page/_blog-cards__item-box.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
 
-.blog__cards-item-box {
+.blog-cards__item-box {
   padding-top: rem(16);
   padding-left: rem(16);
   padding-right: rem(16);
@@ -16,7 +16,7 @@
   }
 }
 
-.blog__cards-item-box:hover {
+.blog-cards__item-box:hover {
   opacity: 0.9;
   transition: 0.3s;
 }
