--- a/src/sass/page/_mv.scss
+++ b/src/sass/page/_mv.scss
@@ -12,3 +12,68 @@
     min-height: rem(400);
   }
 }
+
+.mv__title-wrap {
+  position: absolute;
+  z-index: 10;
+  top: 49.5%;
+  left: 49.5%;
+  transform: translate(-50%, -50%);
+
+
+  @include mq("md") {
+    width: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+ }
+}
+
+.mv__title-sub {
+  font-size: rem(40);
+  letter-spacing: 0.52em;
+  color: $white;
+  text-align: center;
+  text-indent: 1.4rem;
+  font-weight: $regular;
+  font-family: "Lato", sans-serif;
+
+  @include mq("md") {
+    font-size: rem(80);
+    text-align: center;
+    text-indent: 0.53em;
+    letter-spacing: 0.53em;
+  }
+}
+
+.mv__text {
+  margin-top: rem(-3);
+  color: $white;
+  font-size: rem(20);
+  letter-spacing: 0.05em;
+  text-align: center;
+  font-weight: $regular;
+  font-family: "Gotu", sans-serif;
+
+  @include mq("md") {
+    margin-top: rem(-8);
+  }
+}
+
+.mv__slider,
+.mv__slider .picture,
+.mv__slider .picture img {
+    height: inherit;
+    min-height: inherit;
+}
+
+.mv__slider .picture img {
+    width: 100%;
+    object-fit: cover;
+}
+
+
+/* 画像サイズ調整 */
+.mv__slider.swiper-slide img {
+    height: 100vh;
+    width: 100%;
+  }
