--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -11,6 +11,8 @@
 
   .voice__inner {
     position: relative;
+    max-width: rem(600);
+
   }
 
   .voice__inner::before {
@@ -38,134 +40,15 @@
   }
 
   .voice__cards {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+
 
     @include mq("md") {
       margin-top: rem(26);
+      grid-template-columns: repeat(2, 1fr);
       column-gap: rem(40);
       row-gap: rem(40);
-    }
-  }
-
-  .voice-cards__item-box {
-    padding-top: rem(15);
-    padding-left: rem(16);
-    padding-right: rem(16);
-    padding-bottom: rem(24);
-    box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
-    margin-top: rem(45);
-
-    @include mq("md") {
-      max-width: rem(520);
-      padding-left: rem(24);
-      padding-right: rem(24);
-      padding-top: rem(24);
-      padding-bottom: rem(24);
-      margin-top: rem(0);
-    }
-  }
-
-  .voice-cards__item-box:not(:first-child) {
-    margin-top: rem(41);
-
-    @include mq("md") {
-      margin-top: rem(0);
-    }
-  }
-
-  .voice-card__container {
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-  }
-
-  .voice-card__title-box {
-
-    @include mq("md") {
-      max-width: rem(276);
-    }
-  }
-
-  .voice-card__title-box1 {
-
-    @include mq("md") {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
-    }
-  }
-
-  .voice-card__title-sub {
-    font-size: rem(12);
-    line-height: 1.5;
-    font-weight: $regular;
-    text-indent: -0.1rem;
-  }
-
-  .voice-card__title {
-    font-size: rem(12);
-    color: $green;
-    border: rem(1) solid $green;
-    padding: rem(7) rem(10) rem(3.5) rem(12);
-    white-space: nowrap;
-    margin-top: rem(-2);
-    box-sizing: border-box;
-    overflow: hidden;
-    max-width: 100%;
-    display: inline-block;
-
-    @include mq("md") {
-    padding: rem(8) rem(15) rem(7) rem(15);
-    }
-  }
-
-  .voice-card__title-text {
-    font-size: rem(16);
-    font-weight: $medium;
-    margin-top: rem(-3);
-    border-bottom: rem(1) solid $green;
-
-    @include mq("md") {
-      font-size: rem(24);
-      margin-top: rem(13);
-      line-height: 1.4;
-    }
-  }
-
-  .voice-card__img {
-    margin-left: rem(13);
-    max-width: rem(151);
-
-    @include mq("md") {
-    max-width: rem(180);
-    margin-left: rem(16);
-    }
-  }
-
-  .voice-card__img img {
-    width: 100%;
-    object-fit: cover;
-    aspect-ratio: 151/117;
-
-    @include mq("md") {
-      aspect-ratio: 180/140;
-      }
-  }
-
-  .voice-card__text-box {
-    @include mq("md") {
-      margin-top: rem(40);
-    }
-  }
-
-  .voice-card__text-sub {
-    font-size: rem(16);
-    font-weight: $regular;
-    line-height: 1.5;
-    font-family: Noto Sans JP;
-    margin-top: rem(15);
-
-    @include mq("md") {
-      margin-top: rem(0);
     }
   }
 
