フッターまとめ

--- a/src/sass/page/_footer-title.scss
+++ b/src/sass/page/_footer-title.scss
@@ -50,3 +50,21 @@
   opacity: 0.7;
   transition: 0.3s;
 }
+
+.footer-title__name-layout {
+  display: flex;
+  align-items: center;
+}
+
+.footer-title__name-logo {
+  width: rem(120);
+
+  @include mq("md") {
+    width: rem(200);
+  }
+}
+
+.footer-title__name-logo:hover {
+  opacity: 0.7;
+  transition: 0.3s;
+}
