--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -8,3 +8,110 @@
     margin-top: rem(143);
     }
   }
+
+  .contact__inner {
+    position: relative;
+  }
+
+  .contact__inner::after {
+    position: absolute;
+    content: "";
+    width: rem(109);
+     height: rem(50);
+    right: calc(50% - min(48vw, rem(172.5)));
+    top: rem(-25);
+    background: url(/assets/images/prco-logo.svg) center center / contain no-repeat;
+
+    @media (orientation: landscape) and (max-width: rem(767)) {
+     right: calc(52% - min(44vw, rem(650))); }
+
+    @include mq("md") {
+    width: rem(301);
+    height: rem(138);
+    right: calc(50% - min(48vw, rem(670)));
+    top: rem(-40);
+   }
+  }
+
+  .contact__container {
+
+    @include mq("md") {
+      display: flex;
+      box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
+      padding: rem(80) rem(112) rem(80) rem(50);
+      justify-content: space-between;
+    }
+  }
+
+  .contact__box {
+    max-width: rem(295);
+    margin-left: auto;
+    margin-right: auto;
+
+    @include mq("md") {
+      margin-left: 0;
+      margin-right: 0;
+      max-width: rem(465);
+      width: 100%;
+      padding-right: rem(25);
+    }
+  }
+
+  .contact__title-text {
+    color: $green;
+    font-size: rem(14);
+    line-height: calc(18/14);
+    font-weight: $regular;
+    font-family: Noto Sans JP;
+    margin-top: rem(7);
+    text-align: center;
+  }
+
+
+  .top-button-img {
+    width: rem(48);
+    height: rem(48);
+
+    @include mq("md") {
+      width: rem(80);
+      height: rem(80);
+    }
+  }
+
+  .contact__top-button {
+    position: absolute;
+    content: "";
+    right: calc(50% - min(48vw, rem(172)));
+    bottom: -14.5%;
+
+    @include mq("md") {
+    bottom: -34%;
+    right: calc(50% - min(49vw, rem(700)));
+    }
+  }
+
+  .contact__top-button:hover {
+    opacity: 0.7;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+
+  .contact__title-layout {
+    margin-top: rem(16);
+
+    @include mq("md") {
+      padding-left: rem(81);
+      border-left: rem(1) solid $green;
+      padding-top: rem(5);
+      margin-top: rem(0);
+    }
+  }
+
+  .contact__button-layout {
+    margin-top: rem(39);
+    text-align: center;
+
+    @include mq("md") {
+      margin-top: rem(40);
+    }
+  }
