--- a/src/sass/page/_blog-card.scss
+++ b/src/sass/page/_blog-card.scss
@@ -1,5 +1,15 @@
 @use "global" as *;
 
+.blog-card {
+  align-self: stretch;
+  background-color: #fff;
+  box-shadow: 0.125rem 0.125rem 0.625rem rgba(0, 0, 0, 0.25);
+  padding-bottom: 1.375rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1rem;
+}
+
 .blog-card__body {
   margin-top: rem(22);
 
