--- a/src/sass/module/_campaign-page.scss
+++ b/src/sass/module/_campaign-page.scss
@@ -138,6 +138,8 @@
   font-family: "Noto Sans JP", serif;
   margin-top: rem(5);
   font-size: rem(16);
+  border-bottom: rem(1) solid $green;
+  padding-bottom: rem(7);
 
   @include mq("md") {
     font-size: rem(24);
