--- a/src/sass/module/_about-us-page.scss
+++ b/src/sass/module/_about-us-page.scss
@@ -18,7 +18,7 @@
   @include mq("md") {
     width: rem(301);
     height: rem(138);
-    bottom: 101.5%;
+    bottom: 89.5%;
     z-index: 0;
   }
 }
@@ -33,26 +33,44 @@
   }
 }
 
-.about-us-page__img1 {
+
+.about-us-page__img-small {
   position: relative;
-  aspect-ratio: 128/194;
-  width: 37%;
-  margin-top: -61%;
+  width: 37.1014%;
+  z-index: 2;
 }
 
-.about-us-page__img2 {
-  aspect-ratio: 281/186;
+.about-us-page__img-small img {
+  aspect-ratio: 128/194;
+  height: 100%;
   object-fit: cover;
-  // width: 82%;
   width: 100%;
-  display: block;
-  right: 0;
-  bottom: 0;
-  margin-left: auto;
 
   @include mq("md") {
-    aspect-ratio: 880/581;
-    width: 81.45%;
+      aspect-ratio: 400/606;
+  }
+}
+
+
+.about-us-page__img-big {
+  margin-left: auto;
+  margin-top: -48.7%;
+  width: 81.45%;
+  z-index: 1;
+
+  @include mq("md") {
+      margin-top: -48.8%;
+  }
+}
+
+.about-us-page__img-big img {
+  aspect-ratio: 281/186;
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+
+  @include mq("md") {
+      aspect-ratio: 880/581;
   }
 }
 
@@ -60,11 +78,12 @@
   @include mq("md") {
     position: absolute;
     // top: 36.8%;
-    top: 18.8%;
+    top: 30.8%;
     left: 20.2%;
     display: flex;
     gap: rem(40);
     max-width: rem(840);
+    z-index: 2;
   }
 }
 
