--- a/src/sass/module/_about-us.scss
+++ b/src/sass/module/_about-us.scss
@@ -17,39 +17,59 @@
   }
 }
 
-.about-us__img {
+
+.about-us-page__img {
   position: relative;
-  margin-top: rem(50);
   aspect-ratio: 345/212;
   width: 100%;
 
   @include mq("md") {
-    margin-top: rem(119);
     aspect-ratio: 1080/661;
+    // margin-top: rem(40);
   }
 }
 
-.about-us__img1 {
+
+.about-us__img-small {
   position: relative;
-  aspect-ratio: 128/194;
-  width: 37%;
-  margin-top: -61%;
+  width: 37.1014%;
+  z-index: 2;
 }
 
-.about-us__img2 {
-  aspect-ratio: 281/186;
+.about-us__img-small img {
+  aspect-ratio: 128/194;
+  height: 100%;
   object-fit: cover;
-  width: 82%;
-  display: block;
-  right: 0;
-  bottom: 0;
-  margin-left: auto;
+  width: 100%;
 
   @include mq("md") {
-    aspect-ratio: 880/581;
-    width: 81.45%;
+      aspect-ratio: 400/606;
   }
 }
+
+
+.about-us__img-big {
+  margin-left: auto;
+  margin-top: -48.7%;
+  width: 81.45%;
+  z-index: 1;
+
+  @include mq("md") {
+      margin-top: -48.8%;
+  }
+}
+
+.about-us__img-big img {
+  aspect-ratio: 281/186;
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+
+  @include mq("md") {
+      aspect-ratio: 880/581;
+  }
+}
+
 
 .about-us__container {
   @include mq("md") {
@@ -59,6 +79,7 @@
     display: flex;
     gap: rem(40);
     max-width: rem(840);
+    z-index: 2;
   }
 }
 
