--- a/src/sass/module/_sub-page-mv.scss
+++ b/src/sass/module/_sub-page-mv.scss
@@ -1,31 +1,36 @@
 @use "global" as *;
 
-
 .sub-page-mv {
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  position: relative;
   height: rem(460);
-
   @include mq("md") {
-    height: rem(548);
+      width: 100%;
+      height: rem(548);
   }
 }
 
-.sub-page-mv__inner {
-  position: relative;
-  width: 100%;
-  height: inherit;
-}
-
-.sub-page-mv__inner::after {
-  background-color: rgba(64, 143, 149, 0.3);
-  content: "";
+.sub-page-mv::after {
   position: absolute;
+  content: "";
   width: 100%;
   height: 100%;
   top: 0;
-  left: 0;
   right: 0;
+  left: 0;
+  background-color: rgba(64, 143, 149, 0.3);
+}
+
+.sub-page-mv__inner {
+  height: inherit;
+  position: relative;
+}
+
+.sub-page-mv__picture {
+  height: inherit;
+  display: block;
+}
+
+.sub-page-mv__picture img {
+  height: inherit;
+  object-fit: cover;
 }
