--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -35,7 +35,7 @@
   }
 
   .contact__box {
-    max-width: rem(295);
+    max-width: rem(600);
     margin-left: auto;
     margin-right: auto;
 
@@ -74,6 +74,7 @@
     content: "";
     right: calc(50% - min(48vw, rem(172)));
     bottom: -14.5%;
+    // right: rem(15);
 
     @include mq("md") {
     bottom: -34%;
