--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -6,13 +6,13 @@
 
 .footer__container {
   display: flex;
-  justify-content: space-around;
+  // justify-content: space-around;
 
   @include mq("md") {
     margin-top: rem(12);
     white-space: nowrap;
     column-gap: rem(120);
-    justify-content: initial;
+    // justify-content: initial;
   }
 }
 
