--- a/src/sass/module/_about-us.scss
+++ b/src/sass/module/_about-us.scss
@@ -13,8 +13,12 @@
     width: rem(194);
     height: rem(181);
     right: calc(50% - min(48vw, rem(637)));
-    bottom: calc(50% - min(48vw, rem(440)));
+    bottom: calc(50% - min(48vw, rem(478)));
   }
+}
+
+.about-us__img-box {
+  margin-top: rem(25);
 }
 
 
@@ -72,6 +76,8 @@
 
 
 .about-us__container {
+  margin-top: rem(39);
+
   @include mq("md") {
     position: absolute;
     top: 40.8%;
@@ -80,6 +86,7 @@
     gap: rem(40);
     max-width: rem(840);
     z-index: 2;
+    margin-top: 0;
   }
 }
 
@@ -88,7 +95,7 @@
   color: $green;
   line-height: 1;
   font-weight: $regular;
-  margin-top: rem(14);
+  // margin-top: rem(14);
   font-family: "Gotu", sans-serif;
 
   @include mq("md") {
