--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -5,13 +5,16 @@
 }
 
 .footer__container {
-  display: flex;
+  // display: grid;
+  // grid-template-columns: repeat(2, 1fr);
+  // grid-template-rows: 1fr;
+  // display: flex;
   // justify-content: space-around;
 
   @include mq("md") {
     margin-top: rem(12);
     white-space: nowrap;
-    column-gap: rem(120);
+    // column-gap: rem(120);
     // justify-content: initial;
   }
 }
