--- a/src/sass/module/_footer-menu.scss
+++ b/src/sass/module/_footer-menu.scss
@@ -9,6 +9,7 @@
 
   @include mq("md") {
     display: flex;
+    width: auto;
   }
 }
 
@@ -133,5 +134,6 @@
   @include mq("md") {
     display: flex;
     margin-left: rem(120);
+    width: auto;
   }
 }
