--- a/src/sass/module/_information-card.scss
+++ b/src/sass/module/_information-card.scss
@@ -5,15 +5,35 @@
   background-color: $white;
   padding: rem(24);
   margin-top: rem(16);
+  padding-top: rem(18);
+
+  @include mq("md") {
+    display: flex;
+    align-items: center;
+    gap: 5%;
+    margin-top: rem(24);
+    padding-top: rem(24);
+  }
+}
+
+.information-card__body {
+  @include mq("md") {
+    width: 50%;
+  }
 }
 
 .information-card__title {
   border-bottom: rem(1) solid $green;
+  font-size: rem(24);
+  font-weight: $bold;
+
+  @include mq("md") {
+    font-size: rem(24);
+  }
 }
 
 .information-card__text {
   font-size: rem(16);
-  font-weight: $regular;
   font-family: "Noto Sans JP", serif;
   line-height: calc(24/16);
   margin-top: rem(8);
@@ -24,6 +44,7 @@
 
   @include mq("md") {
     margin-top: 0;
+    width: 50%;
   }
 }
 
