ブログのsp見出しキャンペーンまで作成

--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -38,7 +38,7 @@
   font-size: rem(16);
   font-weight: $regular;
   line-height: 1.5;
-  font-family: Noto Sans JP;
+  font-family: "Noto Sans JP", serif;
   margin-top: rem(16);
 }
 
