--- a/src/sass/module/_blog-heading.scss
+++ b/src/sass/module/_blog-heading.scss
@@ -24,3 +24,12 @@
   font-family: "Noto Sans JP", serif;
   font-weight: $regular;
 }
+
+.blog-heading__button-layout {
+  margin-top: rem(40);
+  text-align: center;
+
+  @include mq("md") {
+    margin-top: rem(80);
+  }
+}
