--- a/src/sass/module/_blog-page-cards.scss
+++ b/src/sass/module/_blog-page-cards.scss
@@ -1,11 +1,14 @@
 @use "global" as *;
 
-.blog-heading-cards {
+.blog-page-cards {
   grid-column-gap: rem(40);
-  grid-row-gap: rem(25);
+  grid-row-gap: rem(40);
+  align-items: center;
+  column-gap: rem(40);
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  margin-top: rem(25);
+  margin-top: rem(26);
+  row-gap: rem(40);
   align-items: center;
 
   @include mq("md") {
