--- a/src/sass/module/_blog-heading-cards.scss
+++ b/src/sass/module/_blog-heading-cards.scss
@@ -9,8 +9,10 @@
   align-items: center;
 
   @include mq("md") {
-    gap: rem(40);
-    grid-template-columns: repeat(3, 1fr);
-    margin-top: rem(78);
+    // gap: rem(40);
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: rem(40);
+    grid-row-gap: rem(25);
+    // margin-top: rem(78);
   }
 }
