--- a/src/sass/module/_blog-page-cards.scss
+++ b/src/sass/module/_blog-page-cards.scss
@@ -8,12 +8,14 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   margin-top: rem(26);
-  row-gap: rem(40);
+  // row-gap: rem(40);
   align-items: center;
 
   @include mq("md") {
-    gap: rem(40);
-    grid-template-columns: repeat(3, 1fr);
-    margin-top: rem(78);
+    // gap: rem(40);
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: rem(0);
+    grid-column-gap: rem(40);
+    grid-row-gap: rem(82);
   }
 }
