--- a/src/sass/module/_footer-title.scss
+++ b/src/sass/module/_footer-title.scss
@@ -32,6 +32,7 @@
 .footer-title__facebook-logo:hover {
   opacity: 0.7;
   transition: 0.3s;
+  cursor: pointer;
 }
 
 .footer-title__instagram-logo {
@@ -49,6 +50,7 @@
 .footer-title__instagram-logo:hover {
   opacity: 0.7;
   transition: 0.3s;
+  cursor: pointer;
 }
 
 .footer-title__name-layout {
