--- a/src/sass/module/_blog-heading-card.scss
+++ b/src/sass/module/_blog-heading-card.scss
@@ -10,6 +10,12 @@
   padding-top: rem(16);
 }
 
+.blog-heading-card:hover {
+  opacity: 0.7;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
 .blog-heading-card__item {
   display: flex;
 }
