--- a/src/sass/module/_blog-page-card.scss
+++ b/src/sass/module/_blog-page-card.scss
@@ -6,8 +6,14 @@
   box-shadow: 0.125rem 0.125rem 0.625rem rgba(0, 0, 0, 0.25);
   padding-bottom: rem(23);
   padding-left: rem(16);
-  padding-right: rem(17.6);
+  padding-right: rem(16);
   padding-top: rem(16);
+}
+
+.blog-page-card:hover {
+  // opacity: 0.7;
+  // transition: 0.3s;
+  cursor: pointer;
 }
 
 .blog-page-card__body {
@@ -28,9 +34,8 @@
   padding-bottom: rem(3);
 
   @include mq("md") {
-  margin-top: rem(-2);
-  padding-bottom: rem(3);
-
+    margin-top: rem(-2);
+    padding-bottom: rem(3);
   }
 }
 
@@ -40,6 +45,25 @@
   line-height: 1.5;
   font-family: "Noto Sans JP", serif;
   margin-top: rem(16);
+
+  @include mq("md") {
+    letter-spacing: 0.005em;
+  }
+}
+
+
+.blog-page-card__img {
+  transform: scale(1);
+  transition: .3s ease-in-out;
+  overflow: hidden;
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 301/201;
+}
+
+.blog-page-card__img:hover img {
+  transform: scale(1.1);
+  transition:1s all;
 }
 
 .blog-page-card__img img {
