--- a/src/sass/module/_blog-heading-card.scss
+++ b/src/sass/module/_blog-heading-card.scss
@@ -11,8 +11,6 @@
 }
 
 .blog-heading-card:hover {
-  opacity: 0.7;
-  transition: 0.3s;
   cursor: pointer;
 }
 
@@ -34,6 +32,16 @@
 
 .blog-heading-card__img {
   width: 46%;
+  transform: scale(1);
+  transition: 0.3s ease-in-out;
+  overflow: hidden;
+  object-fit: cover;
+  aspect-ratio: 121/90;
+}
+
+.blog-heading-card__img:hover img {
+  transform: scale(1.1);
+  transition: 1s all;
 }
 
 .blog-heading-card__img img {
