ヘッダー修正

--- a/src/sass/module/_drawer-menu.scss
+++ b/src/sass/module/_drawer-menu.scss
@@ -31,13 +31,13 @@
   left: 0;
 }
 
-.drawer-menu__items-a {
+.drawer-menu__items-upper {
   width: 100%;
   padding-left: rem(22);
   margin-top: rem(15);
 }
 
-.drawer-menu__items-b {
+.drawer-menu__items-bottom {
   width: 100%;
   padding-left: rem(22);
   margin-top: rem(16);
