--- a/src/sass/module/_about-us.scss
+++ b/src/sass/module/_about-us.scss
@@ -9,7 +9,7 @@
   @include mq("md") {
     position: absolute;
     content: "";
-    background: url(/assets/images/about-us-logo.svg) center center / contain no-repeat;
+    background: url(./../images/about-us-logo.svg) center center / contain no-repeat;
     width: rem(194);
     height: rem(181);
     right: calc(50% - min(48vw, rem(637)));
