--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -1,5 +1,12 @@
 @use "global" as *;
 
+.header__hamburger-layout {
+  width: rem(40);
+  height: inherit;
+  padding-right: rem(6);
+  padding-left: rem(6);
+}
+
 .header {
   position: fixed;
   z-index: 9999;
@@ -32,7 +39,7 @@
   height: rem(80);
   border-bottom: rem(1) solid $black;
   justify-content: space-between;
-  padding-right: rem(20);
+  padding-right: rem(13);
 
   @include mq("md") {
     height: rem(90);
@@ -104,38 +111,19 @@
 }
 
 .header__hamburger {
-  position: fixed;
+  position: relative;
   z-index: 9999;
-  top: rem(29);
-  right: rem(15);
+  top: 0;
+  right: -1.5%;
   width: rem(32);
-  height: rem(16);
+  height: inherit;
   cursor: pointer;
 }
 
 .header__hamburger.is-active {
   top: rem(28);
-  right: rem(14);
+  right: rem(4);
   width: rem(40);
-}
-
-
-.header__hamburger-layout::before {
-    content: "";
-    position: absolute;
-    top: rem(-10); /* 適切なサイズを設定 */
-    bottom: rem(-13); /* 適切なサイズを設定 */
-    left: rem(-10); /* 適切なサイズを設定 */
-    right: rem(-10); /* 適切なサイズを設定 */
-}
-
-.header__hamburger-layout::after {
-  content: "";
-  position: absolute;
-  top: rem(-10); /* 適切なサイズを設定 */
-  bottom: rem(-14); /* 適切なサイズを設定 */
-  left: rem(-10); /* 適切なサイズを設定 */
-  right: rem(-10); /* 適切なサイズを設定 */
 }
 
 .header__hamburger span {
@@ -156,16 +144,16 @@
 }
 
 .header__hamburger span:nth-child(1) {
-  top: rem(-2);
+  top: 34%;
 }
 
 .header__hamburger span:nth-child(2) {
-  top: rem(10);
+  top: 49%;
   transition: 0.3s opacity;
 }
 
 .header__hamburger span:nth-child(3) {
-  top: rem(22);
+  top: 64%;
 }
 
 .header__hamburger.is-active span:nth-child(1) {
