--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -9,7 +9,7 @@
   @include mq("md") {
       position: absolute;
       content: "";
-      background: url(/assets/images/prco-logo.svg) center center / contain no-repeat;
+      background: url(./../images/prco-logo.svg) center center / contain no-repeat;
       width: rem(437);
       height: rem(201);
       bottom: -4.5%;
