ブログ修正

--- a/src/sass/module/_about-us-page.scss
+++ b/src/sass/module/_about-us-page.scss
@@ -90,7 +90,7 @@
   font-size: rem(40);
   color: $white;
   line-height: 1;
-  font-weight: $regular;
+  font-weight: $normal;
   font-family: "Gotu", sans-serif;
   position: absolute;
   top: 5.5%;
@@ -108,7 +108,7 @@
 
 .about-us-page__text {
   line-height: 1.5;
-  font-weight: $regular;
+  font-weight: $normal;
   margin-top: rem(40);
   font-family: "Noto Sans JP", serif;
 
