--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -36,7 +36,7 @@
 
 .blog-card__text-sub {
   font-size: rem(16);
-  font-weight: $regular;
+  font-weight: $normal;
   line-height: 1.5;
   font-family: "Noto Sans JP", serif;
   margin-top: rem(16);
@@ -50,7 +50,7 @@
 
 .blog-card__date {
   font-size: rem(12);
-  font-weight: $regular;
+  font-weight: $normal;
   line-height: 1.5;
   font-family: Gotu;
 }
