--- a/src/sass/module/_blog-heading-card-campaign.scss
+++ b/src/sass/module/_blog-heading-card-campaign.scss
@@ -67,7 +67,7 @@
 
 .blog-heading-card-campaign__price-text {
   font-size: rem(14);
-  font-weight: $regular;
+  font-weight: $normal;
   font-family: "Noto Sans JP", serif;
   text-align: center;
 
