--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -83,7 +83,7 @@
 
 .campaign-card__price-text {
   font-size: rem(14);
-  font-weight: $regular;
+  font-weight: $normal;
   font-family: "Noto Sans JP", serif;
   text-align: center;
 
