--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -15,7 +15,7 @@
 
 .footer__copyright {
   font-size: rem(12);
-  font-weight: $regular;
+  font-weight: $normal;
   line-height: 1.5;
   color: $white;
   padding-left: rem(14);
