--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -89,7 +89,7 @@
   justify-content: center;
   color: $white;
   font-size: rem(10);
-  font-weight: $regular;
+  font-weight: $normal;
   height: inherit;
   align-items: center;
   white-space: nowrap;
