--- a/src/sass/module/_information.scss
+++ b/src/sass/module/_information.scss
@@ -62,7 +62,7 @@
 
 .information__text {
   margin-top: rem(7);
-  font-weight: $regular;
+  font-weight: $normal;
   font-family: Noto Sans JP;
   line-height: 1.5;
 }
