--- a/src/sass/module/_page-section-title.scss
+++ b/src/sass/module/_page-section-title.scss
@@ -2,7 +2,7 @@
 
 .page-section-title  {
   font-size: rem(40);
-  font-weight: $regular;
+  font-weight: $normal;
   color: $white;
   font-family: "Lato", sans-serif;
   position: absolute;
