--- a/src/sass/module/_price-item.scss
+++ b/src/sass/module/_price-item.scss
@@ -21,7 +21,7 @@
 
 .price-item__text {
   font-size: rem(14);
-  font-weight: $regular;
+  font-weight: $normal;
   line-height: calc(24 / 14);
   font-family: Noto Sans JP;
   margin-top: rem(8);
@@ -39,7 +39,7 @@
 
 .price-item__text-sub {
   font-size: rem(14);
-  font-weight: $regular;
+  font-weight: $normal;
   line-height: calc(24 / 14);
   font-family: Noto Sans JP;
   margin-top: rem(8);
