--- a/src/sass/module/_blog-heading-card-review.scss
+++ b/src/sass/module/_blog-heading-card-review.scss
@@ -17,7 +17,7 @@
 
 .blog-heading-card-review__title-sub {
   font-size: rem(12);
-  font-weight: $regular;
+  font-weight: $normal;
   line-height: 1;
   font-family: "Noto Sans JP", serif;
 }
