--- a/src/sass/module/_blog-page-card.scss
+++ b/src/sass/module/_blog-page-card.scss
@@ -11,10 +11,14 @@
 }
 
 .blog-page-card:hover {
-  // opacity: 0.7;
-  // transition: 0.3s;
   cursor: pointer;
 }
+
+.blog-page-card:hover .blog-page-card__img img {
+  transform: scale(1.1);
+  transition: .3s ease-in-out;
+}
+
 
 .blog-page-card__body {
   margin-top: rem(22);
@@ -41,7 +45,7 @@
 
 .blog-page-card__text-sub {
   font-size: rem(16);
-  font-weight: $regular;
+  font-weight: $normal;
   line-height: 1.5;
   font-family: "Noto Sans JP", serif;
   margin-top: rem(16);
@@ -74,7 +78,7 @@
 
 .blog-page-card__date {
   font-size: rem(12);
-  font-weight: $regular;
+  font-weight: $normal;
   line-height: 1.5;
   font-family: Gotu;
 }
