--- a/src/sass/module/_campaign-page.scss
+++ b/src/sass/module/_campaign-page.scss
@@ -61,7 +61,7 @@
   justify-content: center;
   padding: rem(6) 0;
   font-size: rem(14);
-  font-weight: $regular;
+  font-weight: $normal;
   font-family: "Noto Sans JP", serif;
   cursor: pointer;
   color: $green;
@@ -177,7 +177,7 @@
 .campaign-card__reserve {
   color: $green;
   font-size: rem(14);
-  font-weight: $regular;
+  font-weight: $normal;
   font-family: "Noto Sans JP", serif;
   text-align: center;
   margin-top: rem(3);
