--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -53,7 +53,7 @@
     color: $green;
     font-size: rem(14);
     line-height: calc(18/14);
-    font-weight: $regular;
+    font-weight: $normal;
     font-family: Noto Sans JP;
     margin-top: rem(7);
     text-align: center;
