--- a/src/sass/module/_information-tab.scss
+++ b/src/sass/module/_information-tab.scss
@@ -47,7 +47,7 @@
 
 .information-tab__title {
   font-size: rem(14);
-  font-weight: $regular;
+  font-weight: $normal;
 
   @include mq("md") {
     font-size: rem(24);
