--- a/src/sass/module/_mv.scss
+++ b/src/sass/module/_mv.scss
@@ -34,7 +34,7 @@
   color: $white;
   text-align: center;
   text-indent: 1.4rem;
-  font-weight: $regular;
+  font-weight: $normal;
   font-family: "Lato", sans-serif;
 
   @include mq("md") {
@@ -51,7 +51,7 @@
   font-size: rem(20);
   letter-spacing: 0.05em;
   text-align: center;
-  font-weight: $regular;
+  font-weight: $normal;
   font-family: "Gotu", sans-serif;
 
   @include mq("md") {
