--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -25,7 +25,7 @@
   .voice-card__title-sub {
     font-size: rem(12);
     line-height: 1.5;
-    font-weight: $regular;
+    font-weight: $normal;
     text-indent: -0.1rem;
   }
 
@@ -87,7 +87,7 @@
 
   .voice-card__text-sub {
     font-size: rem(16);
-    font-weight: $regular;
+    font-weight: $normal;
     line-height: 1.5;
     font-family: Noto Sans JP;
     margin-top: rem(15);
