ブログ詳細ページ追加

--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -44,7 +44,7 @@
   @include mq("md") {
     height: rem(90);
     padding-left: rem(25);
-    margin-right: rem(1);
+    padding-right: rem(20);
     border-bottom: none;
   }
 }
